<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iGetHappy</string>
    <string name="please_wait_meassge">Please wait..</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="no_record_found">No Record Found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="gps_msg">You need to activate location service to use this feature. Please turn on network or GPS mode
        in location settings
    </string>
    <string name="email_sent_to">An email has been sent to </string>
    <string name="for_consent"> for consent</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="forgot_password_msg">FORGOT PASSWORD ?</string>
    <string name="empty_username_error_msg">Please enter valid username</string>
    <string name="no_internet_msg">No internet connection.</string>
    <string name="enter_phone">Please enter Phone Number</string>
    <string name="new_assignments">New Assignments</string>
    <string name="maintenance_history">Maintenance History</string>
    <string name="change_password">Change Password</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="location_permissions">Location Permissions Turned Off</string>
    <string name="allow_worknova_location">Allow to turn on Location Permissions</string>
    <string name="turn_on_location">Turn on Location</string>
    <string name="facebook_app_id">824806454558334</string>
    <string name="home">Home</string>
    <string name="support">Support</string>
    <string name="unlike">UNLIKE</string>
    <string name="no_data_found_msg">No data found.</string>
    <string name="server_error_msg">Server error.Please try again.</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the
        issue !
    </string>
    <string name="crash_dialog_title">Shadow has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click OK.
    </string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="user_name_error">Username need to be over 6 character long</string>
    <string name="invalid_pass_error">Password should be between 6 and 15 characters</string>
    <string name="location_error">Location should be selected</string>
    <string name="time_error">Meeting time should be selected</string>
    <string name="date_error">Meeting date should be selected</string>
    <string name="login_email">Login using Email</string>
    <string name="tell_yourself">Tell us about yourself</string>
    <string name="com_text">To communicate with a counselor/professional</string>
    <string name="language_preferences">What are your Language Preferences ?</string>
    <string name="tell_gender">Select your Gender</string>
    <string name="select_dob">What\'s your Date of Birth</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="invalid_first_name">Please enter first name</string>
    <string name="invalid_last_name">Please enter last name</string>
    <string name="create_username">Hi! Signup via email</string>
    <string name="create_password">Hi! Create a password</string>
    <string name="password">Password</string>
    <string name="add_care_reciever">Add another Care Receiver</string>
    <string name="i_am">I\'m a</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="want_caregiver">Want to be a caregiver for a loved one ?</string>
    <string name="caregiver_text2">An individual who wishes to initiate and coordinate care for a loved one</string>
    <string name="caregiver_text3">You can add a Care Receiver at anytime from your profile as well</string>
    <string name="consent_text">I consent to the</string>
    <string name="user_first_last"><![CDATA[What is your first & last  name?]]></string>
    <string name="school_selection"><![CDATA[What is the name & location of the school?]]></string>
    <string name="comp_selection"><![CDATA[What is the name & location of the company?]]></string>
    <string name="address_error_msg">Invalid address</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="via_email">via Email</string>
    <string name="email">Email ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="carereciever_name">Care Receiver Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="email_phone">Email ID / Phone Number</string>
    <string name="email_id">Email ID</string>
    <string name="select_profession">Please select profession</string>
    <string name="minor_question">Is Care Receiver a minor?</string>
    <string name="relationship">What relationship to care receiver?</string>
    <string name="forgot_email_hint">Enter your registered email ID</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="empty">Please enter</string>
    <string name="internal_server_error">Internal server error, so please try after some time!</string>
    <string name="invalid">Please enter valid</string>
    <string name="invalid_email">Please enter valid Email ID</string>
    <string name="invalid_phone">Please enter valid Phone</string>
    <string name="internet_connection">Please check your internet connection and try after some time!</string>
    <string name="maintenance_user">Maintenance User</string>
    <string name="via_number">via Number</string>
    <string name="dialog_verify_pass_title_name">Choose option to reset your password?</string>
    <string name="dialog_delete_title_name">Are you sure you want to delete this user?</string>
    <string name="dialog_verify_otp_title_name">Choose option to validate your account</string>
    <string name="video_dialog">select or create</string>
    <string name="media_dialog">Photo or Video</string>
    <string name="tooltip_user">To register as a user "User" means, the user will have the option to shadow or be
        shadowed by other user(s) on the platform
    </string>
    <string name="tooltip_school">To register as a "School" a valid representor of the establishment is needed to
        verified the school account. A shadow team member will be reaching out post registration to confirm registration
    </string>
    <string name="tooltip_compnay">To register as a "Company" a valid representor of the establishment is needed to
        verified the Company account. A shadow team member will be reaching out post registration to confirm
        registration
    </string>
    <string name="bio_hint">write something....</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="school_w_occu">School with these occupations</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_select_video">Select Video</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="title_description">A library with UI and mechanisms to trim local videos on Android applications
    </string>
    <string name="description_app">
        # Provide UI to preview and select start/end of the video to trim
        \n\n# Thumbnails with frame by frame overview of the video
        \n\n# Works with gallery and recorded videos
    </string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="trimming_progress" tools:ignore="TypographyEllipsis">Trimming your video...</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="chat_attachment">Attachment</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="referral_code">I have a referral code</string>
    <string name="get_started">Get Started</string>
    <string name="continu">Continue</string>
    <string name="begin">Begin</string>
    <string name="dont_have_account">Don\'t have an account yet ?</string>
    <string name="shadowed_me">Shadowed Me</string>
    <string name="shadowed_other">Shadowed Others</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_rationale_location">Location Permission</string>
    <string name="cannot_rate_your_own_profile">You can\'t rate your own profile.</string>
    <string name="text_push_notification_message">Shadow Chat Message</string>
    <string name="sender_id">826649076076</string>
    <string name="file_provider_authority" translatable="false">com.android.igethappy.fileprovider</string>
    <string name="no_occupation">No occupation yet.</string>
    <string name="no_interest">No interest yet.</string>
    <string name="no_chat_dialog_found">No chat found.</string>
    <string name="current_version">0.9.1</string>
    <string name="terms_conditions">
        <u>Terms &amp; Conditions</u>
    </string>
    <string name="community">Community</string>
    <string name="meditation">Meditation</string>
    <string name="happy_memories">Happy Memories</string>
    <string name="mood_logs">Moods Logs</string>
    <string name="my_vents">My Vents</string>
    <string name="documents">Documents</string>
    <string name="reminders">Reminders</string>
    <string name="My_Appointments">My Appointments</string>
    <string name="care_receiver">Care Receiver</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="chat_bot">ChatBot</string>
    <string name="settings">Settings</string>
    <string name="pull_down">Pull Down To Refresh</string>
    <string name="whoops">Whoops</string>
    <string name="slow_internet">Slow or no internet connection.</string>
    <string name="check_settings">Please check your internet settings</string>
    <string name="letschat">Let\'s Chat</string>
    <string name="chat_welcome">Welcome to iGet Happy</string>
    <string name="letsdothis">Let\'s do this</string>
    <string name="typehere">Type here</string>
</resources>