<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cl_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="match_parent"/>

            <LinearLayout
                    android:id="@+id/ll_no_connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
            >

                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/ic_no_connection"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorPrimary"
                />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/whoops"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:fontFamily="@font/roboto_regular"
                />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/slow_internet"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/roboto_regular"
                />


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_settings"
                        android:textSize="17sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/roboto_regular"
                />

                <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:text="@string/pull_down"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:background="@drawable/roundedge_blue_bg"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_regular"
                />


            </LinearLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
