<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="viewModel"
                type="com.example.singhrahuldeep.igethappy.viewModel.SignUpViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.singhrahuldeep.igethappy.views.signup.SignupActivity">

        <ScrollView
                android:id="@+id/ScrollView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/RelativeLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                <ImageView
                        android:id="@+id/iv_back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_icon"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_30"/>

                <TextView
                        android:id="@+id/tv_signup_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/create_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_20"/>


                <EditText
                        android:id="@+id/et_email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_signup_text"
                        android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_50"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLength="50"
                        android:backgroundTint="@color/colorGreyTracking"
                        android:drawableLeft="@drawable/email_icon"
                        android:drawablePadding="@dimen/padding_left_email"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:textColor="@color/black"/>

                <EditText
                        android:id="@+id/et_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_email"
                        android:layout_width="match_parent"
                        android:lines="1"
                        android:maxLength="13"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:backgroundTint="@color/colorGreyTracking"
                        android:drawableLeft="@drawable/ic_telephone"
                        android:drawablePadding="@dimen/padding_left_email"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/phone_number"
                        android:textColor="@color/black"/>


                <EditText
                        android:id="@+id/et_pass"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:maxLength="16"
                        android:inputType="textPassword"
                        android:backgroundTint="@color/colorGreyTracking"
                        android:drawableLeft="@drawable/padlock"
                        android:drawablePadding="@dimen/padding_left_email"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/password"
                        android:textColor="@color/black"/>


                <LinearLayout
                        android:id="@+id/rl_terms"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_pass"
                        android:layout_marginTop="@dimen/dp_50"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/tv_consent"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginBottom="@dimen/dp_10"
                            android:textSize="@dimen/dp_15"
                            android:text="@string/consent_text"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_terms_conditions"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginBottom="@dimen/dp_10"
                            android:textSize="@dimen/dp_15"
                            android:text="@string/terms_conditions"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <Switch
                            android:id="@+id/switch_terms"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:thumb="@drawable/ic_ellipse"
                            android:track="@drawable/round_switch_background"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>


                <RelativeLayout
                        android:id="@+id/rl_raferral"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_terms"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_20"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:background="@drawable/round_layout_border_black">

                    <TextView
                            android:id="@+id/tv_account_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="@dimen/dp_20"
                            android:text="@string/referral_code"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_16"/>

                </RelativeLayout>

                <Button
                        android:id="@+id/btn_get_started"
                        app:layout_constraintTop_toBottomOf="@+id/rl_raferral"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/sp_16"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_20"
                        android:onClick="@{()-> viewModel.onSignUpClicked(etEmail.getText().toString(),etPhone.getText().toString(),etPass.getText().toString())}"
                        android:background="@drawable/ic_login_button"
                        android:padding="@dimen/padding_login_button"
                        android:text="@string/get_started"
                        android:textColor="@color/white_color"/>
                <!--
                -->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>