<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
>


    <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context="com.example.singhrahuldeep.igethappy.views.chatbot.ChatBotActivity">

        <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/toolbar_background"
        >

            <ImageView
                    android:id="@+id/iv_main"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/ic_chat_bot"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/dimen_10dp"
            />
            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/iv_main"
                    android:textSize="@dimen/sp_20"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/letschat"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_regular"
                    android:textStyle="bold"
            />

        </RelativeLayout>

        <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_below="@+id/rl_top"
                android:layout_margin="10dp"
                android:padding="5dp"
        >
            <ImageView
                    android:id="@+id/iv_chatbot"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/ic_chat_bot"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
            />

            <TextView
                    android:id="@+id/tv_chatmessage"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_toEndOf="@+id/iv_chatbot"
                    android:layout_centerInParent="true"
                    android:background="@drawable/roundedge_white_bg"
                    android:layout_marginStart="10dp"
                    android:text="@string/chat_welcome"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
            />

        </RelativeLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_above="@+id/rl_bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
        >
            <TextView
                    android:id="@+id/tv_startchat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:text="@string/letsdothis"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/roundedge_black_blue"
                    android:textColor="@color/white"
            />

            <TextView
                    android:id="@+id/tv_skip"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/skip"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:background="@drawable/roundedge_black_bg"
                    android:textColor="@color/white"
            />


        </LinearLayout>

        <RelativeLayout
                android:id="@+id/rl_bottom"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:background="@drawable/roundedge_bg"
        >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/typehere"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:background="@android:color/transparent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_toLeftOf="@+id/tv_send"
            />

            <ImageView
                    android:id="@+id/tv_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_send_message"
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
            />


        </RelativeLayout>

    </RelativeLayout>
</layout>